# exploring_dask

./: OMP_MPI_routines.ipynb  README.md  examples.ipynb  game_of_life.py  game_of_life_app.py  game_of_life_module.py  hello.py  intro.ipynb  pyproject.toml  requirements.txt  streamlit_test.py
.github/workflows/: codeql.yml
notebooks/: 1.intro.ipynb  2.examples.ipynb  3.OMP_MPI_routines.ipynb  Incomplete_Ising_model.ipynb
utils/: game_of_life_module.py
